# rugby-planner-demo

./: .env.example  .gitignore  README.md  langgraph.json  project_notes.md  pyproject.toml  requirements.txt
src/rugby_planner/: __init__.py  graph.py  main.py
src/rugby_planner/eval/: __init__.py  dataset.jsonl  generate_dataset.py  generated_dataset.jsonl  rugby-planner-dataset.jsonl  run_eval.py  simple_langsmith_eval.py  small.jsonl
src/rugby_planner/tools/: calendar.py  nutrition.py  parse.py  recovery.py  weather.py
